# python_ddd

./: .env-template  Dockerfile  README.md  docker-compose.yml  main.py  mongo-init.js  pyproject.toml  requirements.txt
api/: app_container.py
api/post/: controller.py  post_container.py  post_instrumentation.py  post_service.py
api/user/: controller.py  instrumentation.py  service.py  user_container.py  user_instrumentation.py  user_service.py
features/post/application/: create_post.py  get_posts_by_user.py  post_app_service.py  post_dto.py  post_mapper.py
features/post/domain/: post.py  post_dao.py
features/post/infrastructure/adapters/persistance/: http_post_data.py
features/post/infrastructure/persistance/: alchemy_post_data.py  post_entity.py
features/shared/domain/: valid_datetime.py  valid_string.py  valid_uuid.py
features/shared/infrastructure/: alchemy_database.py
features/user/: dependencies_container.py
features/user/application/: create_user.py  dto.py  get_user.py  mappers.py  service.py  user_app_service.py  user_mapper.py
features/user/application/exceptions/: password_exceptions.py
features/user/domain/: email.py  model.py  password.py  repository.py  user.py  user_repository.py  value_object.py
features/user/domain/exceptions/: password_exceptions.py
features/user/infrastructure/: fake_user_data.py  mongo_user_data.py
features/user/infrastructure/adapters/persistance/: http_user_data.py
features/user/infrastructure/persistance/: memory_user_data.py  mongo_user_data.py
(+2 files in other folders)
